# Kardii-AI-Companion

./: README.md  WORKFLOW-BACKUP-build-macos.yml  package-lock.json  package.json
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
src/: asset-loading.js  chat.css  chat.html  chat.js  index.html  main.js  style.css  workbench.css  workbench.html  workbench.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  voice.rs
tools/: build_animations.py
