[package]
name = "kardii-ai-companion"
version = "0.8.1"
description = "Kardii cross-platform floating desktop pet"
authors = ["Zt S"]
edition = "2021"

[lib]
name = "kardii_ai_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-updater = "2"
xcap = "0.9.6"

base64 = "0.22.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "system-proxy"] }
futures-util = "0.3"
rfd = "0.15"
arboard = "3"
open = "5"
tokio = { version = "1", features = ["process", "time"] }
cpal = "0.16"
sherpa-onnx = { version = "1.13.4", default-features = false }
bzip2 = "0.4"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
